tests/lean/autobound_and_macroscopes.lean
local notation "A" => id x
theorem test : A = A := sorry
